infra/k8s/appone-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appone-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appone-mongo
  template:
    metadata:
      labels:
        app: appone-mongo
    spec:
      containers:
        - name: appone-mongo
          image: mongo
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: appone-mongo-srv
spec:
  selector:
    app: appone-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
