infra/k8s/apptwo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apptwo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apptwo
  template:
    metadata:
      labels:
        app: apptwo
    spec:
      containers:
        - name: apptwo
          image: sunilsalat/apptwo
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: apptwo-srv
spec:
  type: ClusterIP
  selector:
    app: apptwo
  ports:
    - name: apptwo
      protocol: TCP
      port: 9000
      targetPort: 9000
